[package]
name = "micewriter-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "micewriter-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Local cache
rocksdb = "0.22"

# Apache Iceberg — REST catalog (Nessie) + FileIO (S3/MinIO)
iceberg = "0.9"
iceberg-catalog-rest = "0.9"
iceberg-catalog-glue = "0.9"
iceberg-storage-opendal = "0.9"

# Columnar in-memory format and Parquet serialization
arrow = "57"
parquet = { version = "57", features = ["arrow"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Randomness for flush jitter
rand = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unique IDs for Parquet file paths
uuid = { version = "1", features = ["v4"] }

# Byte buffers
bytes = "1"
[features]
# Native Rust Iceberg support is sufficient; no Python fallback needed.
